[package]
name = "hexf"
version = "0.2.0"
authors = ["Kang Seonghoon <public+rust@mearie.org>"]

description = "Hexadecimal float support for Rust"
homepage = "https://github.com/lifthrasiir/hexf"
documentation = "https://docs.rs/hexf/"
repository = "https://github.com/lifthrasiir/hexf"
readme = "README.md"
license = "CC0-1.0"
edition = "2018"

[workspace]
members = ["parse/"]

[lib]
proc-macro = true

[dependencies]
hexf-parse = { version = "0.2.0", path = "parse/" }
syn = "1.0.41"

