[package]
name = "hexf-impl"
version = "0.2.0"
authors = ["Kang Seonghoon <public+rust@mearie.org>"]

description = "Hexadecimal float support for Rust (auxiliary crate; see also hexf)"
homepage = "https://github.com/lifthrasiir/hexf"
documentation = "https://docs.rs/hexf/"
repository = "https://github.com/lifthrasiir/hexf"
license = "CC0-1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.41"
hexf-parse = { version = "0.2.0", path = "../parse/" }
